# proyecto_sistemas_distribuidos

./: .gitignore  README.md  deploy.sh
configuraciones_sanitizadas/docker/: Dockerfile  docker-compose.yml
configuraciones_sanitizadas/vpn/: peer_privatekey  peer_publickey
docker/: Dockerfile  docker-compose.yml
rust/: Cargo.toml
rust/src/: main.rs
