[package]
name = "sistema_distribuido"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencias base permitidas por el documento
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
